add triangle counting and Truss,copy GraphMsg to BFSMsg

--- a/server/ServerModules.cfg
+++ b/server/ServerModules.cfg
@@ -1,3 +1,5 @@
 # Comment out modules using a `#` to exclude a module from a build
 # The following modules will be appended to Arkouda's ServerModules.cfg
-GraphMsg
+BFSMsg
+TriCntMsg
+TrussMsg
