corrected chapel warnings

--- a/server/ServerModules.cfg
+++ b/server/ServerModules.cfg
@@ -1,9 +1,10 @@
 # Comment out modules using a `#` to exclude a module from a build
 # The following modules will be appended to Arkouda's ServerModules.cfg
 BFSMsg
-TriCntMsg
-TrussMsg
-SuffixArrayMsg
+CCMsg
+# TriCntMsg
+# TrussMsg
+# SuffixArrayMsg
 GraphMsg
-TriCtrMsg
-JaccardMsg
+# TriCtrMsg
+# JaccardMsg
