--- a/server/ServerModules.cfg
+++ b/server/ServerModules.cfg
@@ -2,9 +2,9 @@
 # The following modules will be appended to Arkouda's ServerModules.cfg
 BFSMsg
 CCMsg
-# TriCntMsg
-# TrussMsg
-# SuffixArrayMsg
+TriCntMsg
+TrussMsg
+SuffixArrayMsg
 GraphMsg
-# TriCtrMsg
-# JaccardMsg
+TriCtrMsg
+JaccardMsg
