finished all functions for DIP-SLL and adding node labels and edge relationships for DIP-DLL just need to finish same for DIP-ARR and the query functions

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -1,8 +1,10 @@
 BuildGraphMsg
-PropertyGraphMsg
+DipArrayPropertyGraphMsg
+DipDLLPropertyGraphMsg
+DipSLLPropertyGraphMsg
 GraphInfoMsg
-BFSMsg
-TriCtrMsg
-TriCntMsg
-TrussMsg
-CCMsg
+# BFSMsg
+# TriCtrMsg
+# TriCntMsg
+# TrussMsg
+# CCMsg
