subgraph isomorphism integration -- all code in figure out segmentation faults

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -2,6 +2,7 @@ BuildGraphMsg
 DipArrayPropertyGraphMsg
 DipDLLPropertyGraphMsg
 DipSLLPropertyGraphMsg
+SubgraphIsomorphismMsg
 GraphInfoMsg
 BreadthFirstSearchMsg
 TriCtrMsg
