include Oliver's code and add R before the same function

--- a/arachne_development/server/ServerModules.cfg
+++ b/arachne_development/server/ServerModules.cfg
@@ -8,3 +8,13 @@ GraphMsg
 TriCtrMsg
 JaccardMsg
 LCSMsg
+
+
+BreadthFirstSearchMsg
+BuildGraphMsg
+GraphInfoMsg
+PropertyGraphMsg
+SquareCountMsg
+
+TriangleCountMsg
+ConnectedComponentsMsg
