--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -4,8 +4,7 @@ BreadthFirstSearchMsg
 PropertyGraphMsg
 TriCtrMsg
 TriangleCountMsg
-SquareCountMsg
 TrussMsg
-CCMsg
 SubgraphIsomorphismMsg
 ConnectedComponentsMsg
+SubgraphIsomorphismVF2Msg
