thw code includes Ullmann and (VF2 stable seq) version

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -1,11 +1,11 @@
 BuildGraphMsg
 GraphInfoMsg
-BreadthFirstSearchMsg
+#BreadthFirstSearchMsg
 PropertyGraphMsg
-TriCtrMsg
-TriangleCountMsg
-SquareCountMsg
-TrussMsg
-ConnectedComponentsMsg
+#TriCtrMsg
+#TriangleCountMsg
+#SquareCountMsg
+#TrussMsg
+#ConnectedComponentsMsg
 SubgraphIsomorphismMsg
 SubgraphIsomorphismVF2Msg
