ADDED generalized attribute insertion method      Still have to finish testing node attribute and label adding, then code edge relationship method based off new node label one, finish with unit tests

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -1,7 +1,7 @@
 BuildGraphMsg
 GraphInfoMsg
 BreadthFirstSearchMsg
-PropertyGraphMsg
+BuildPropertyGraphMsg
 TriCtrMsg
 TriangleCountMsg
 SquareCountMsg
