--- a/arachne/pytest.ini
+++ b/arachne/pytest.ini
@@ -3,12 +3,14 @@ filterwarnings =
     ignore:Version mismatch between client .*
 testpaths =
     test/class_test.py
-    test/reading_test.py
-    test/bfs_test.py
+    test/algorithm_test.py
+    test/deterministic_generators_test.py
+    test/random_generators_test.py
+    test/prop_graph_test.py
 python_functions = test*
 env =
     D:ARKOUDA_SERVER_HOST=localhost
-    D:ARKOUDA_SERVER_PORT=5554
+    D:ARKOUDA_SERVER_PORT=5555
     D:ARKOUDA_RUNNING_MODE=CLASS_SERVER
     D:ARKOUDA_NUMLOCALES=2
     D:ARKOUDA_VERBOSE=True
