fix new shared SymEntry and add Oliver's functions

--- a/arachne_development/server/ServerModules.cfg
+++ b/arachne_development/server/ServerModules.cfg
@@ -3,19 +3,21 @@
 BFSMsg
 CCMsg
 DiameterMsg
-TriCntMsg
+TriCntMsgD
 TrussMsg
 GraphMsg
-TriCtrMsg
+TriCtrMsgD
 JaccardMsg
 LCSMsg
 
 
-BreadthFirstSearchMsg
 BuildGraphMsg
 GraphInfoMsg
-PropertyGraphMsg
-SquareCountMsg
-
+BreadthFirstSearchMsg
+BuildPropertyGraphMsg
+TriangleCentralityMsg
 TriangleCountMsg
+SubgraphIsomorphismMsg
+SquareCountMsg
+TrussMsg
 ConnectedComponentsMsg
