Integrated diameter function from arachne_development

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -2,6 +2,7 @@ BuildGraphMsg
 GraphInfoMsg
 BreadthFirstSearchMsg
 BuildPropertyGraphMsg
+DiameterMsg
 TriangleCentralityMsg
 TriangleCountMsg
 SubgraphIsomorphismMsg
