roll back in arachne

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -7,4 +7,5 @@ TriangleCentralityMsg
 TriangleCountMsg
 SubgraphIsomorphismMsg
 SquareCountMsg
-ConnectedComponentsMsg
+TrussMsg
+ConnectedComponentsMsg  
