make wcc its own module

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -4,7 +4,7 @@ BreadthFirstSearchMsg
 BuildPropertyGraphMsg
 TriangleCentralityMsg
 TriangleCountMsg
-SubgraphIsomorphismMsg
+WellConnectedComponentsMsg
 SquareCountMsg
 TrussMsg
 ConnectedComponentsMsg
