--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -1,11 +1,12 @@
-BuildGraphMsg
-GraphInfoMsg
 BreadthFirstSearchMsg
+BuildGraphMsg
 BuildPropertyGraphMsg
+ConnectedComponentsMsg
 DiameterMsg
+GraphInfoMsg
+SquareCountMsg
+SubgraphIsomorphismMsg
 TriangleCentralityMsg
 TriangleCountMsg
-SubgraphIsomorphismMsg
-SquareCountMsg
 TrussMsg
-ConnectedComponentsMsg  
+WellConnectedComponentsMsg
