--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -5,7 +5,7 @@ ConnectedComponentsMsg
 DiameterMsg
 GraphInfoMsg
 SquareCountMsg
-SubgraphIsomorphismMsg
+SubgraphSearchMsg
 TriangleCentralityMsg
 TriangleCountMsg
 TrussMsg
