--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -2,6 +2,7 @@ BreadthFirstSearchMsg
 BuildGraphMsg
 BuildPropertyGraphMsg
 ConnectedComponentsMsg
+ConnectivityModifierMsg
 DiameterMsg
 GraphInfoMsg
 SquareCountMsg
