combined WCC and CM into one module with one launcher method and one recursive checker

--- a/arachne/server/ServerModules.cfg
+++ b/arachne/server/ServerModules.cfg
@@ -2,7 +2,6 @@ BreadthFirstSearchMsg
 BuildGraphMsg
 BuildPropertyGraphMsg
 ConnectedComponentsMsg
-ConnectivityModifierMsg
 DiameterMsg
 GraphInfoMsg
 SquareCountMsg
@@ -10,5 +9,4 @@ SubgraphSearchMsg
 TriangleCentralityMsg
 TriangleCountMsg
 TrussMsg
-WellConnectedComponentsMsg
-# WellConnectednessMsg
+WellConnectednessMsg
